made coverstory higher resolution, fixed ads, added arrows to next/prev buttons

--- a/ubyssey/static_src/src/styles/components/_infinitefeed.scss
+++ b/ubyssey/static_src/src/styles/components/_infinitefeed.scss
@@ -56,7 +56,7 @@
     margin:auto;
     display:flex;
     min-height: 66vh;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 
 .c-home-infinitefeed {
